@@ -1,3 +1,8 @@
+2011-08-03  Philippe Waroquiers  <philippe.waroquiers@skynet.be>
+
+	* gdb.base/break-always.exp: Complete the test
+	with duplicated breakpoints and enabling/disabling them.
+
 2011-08-02  Tom Tromey  <tromey@redhat.com>
 
 	PR gdb/11289:
